0.20.4
	bugfix: %GPASS% dictionary markers were ignored in selectboxes
	bugfix: 802.1Q: better Force10 switches support
0.20.3 2012-12-19
	bugfix: DB exception on ports linking (#699)
0.20.2 2012-12-19
	bugfix: explicitly request Cacti RRA ID 1 (#466)
	bugfix: improve UCS error handling
	bugfix: proper handling of VLAN 1 in Huawei VRP 5.7 802.1Q gateway
	bugfix: database was corrupted after IPv4 networks creation on some PHP versions (#643)
	bugfix: LivePTR erased comments when performing an import (#645)
	bugfix: NX-OS LLDP-fetching connection was sometimes hanged up prematurely
	bugfix: list objects page threw exception if an object's container was nameless (#661)
	bugfix: Invalid binary IP exceptions on certain IPs (#673, #675)
	bugfix: list all VLANs of a network in tree view (#697)
	update: SLB: ability to specify multiple RS ports
	update: remove old gateways code, including Live VLANs
	update: allow linking more than one VLAN from same domain per a network
	update: make 802.1Q port list offline management multi-port (#653)
	update: SNMP support for Cisco WS-C2948 (#546), D-Link DGS-1210-24 (#629), Motorola RFS4000 (#657)
	update: allow setting MySQL client buffer size (#659)
	update: cut 'Quidway' word from Huawei switch dictionary items for unification with newer products
	update: 802.1Q: treat connection errors as recoverable
	new feature: abstract tags, which cannot be assigned (#577)
	new feature: added support for munin graphs (#406) by Michael Holm
0.20.1 2012-10-04
	bugfix: restore D-Link (#533) and Linux (#541) gateway support
	bugfix: IPv4 network capacity was not displayed on 32-bit machines (#602)
	bugfix: fixed infinite loop when creating default (/0) IP networks
	bugfix: IPs in NAT rules were displayed incorrectly (#600)
	bugfix: delete Rack history when a Rack is deleted (#604)
	bugfix: Location attributes weren't being saved (#605)
	bugfix: duplicate names for Racks and Rows weren't allowed (#606)