@@ -219,6 +219,7 @@ function getDBUpgradePath ($v1, $v2)
 		'0.20.1',
 		'0.20.2',
 		'0.20.3',
+		'0.20.4',
 	);
 	if (!in_array ($v1, $versionhistory) or !in_array ($v2, $versionhistory))
 		return NULL;
@@ -1613,6 +1614,10 @@ CREATE TABLE `MuninGraph` (
 			break;
 		case '0.20.3':
 			$query[] = "UPDATE Config SET varvalue = '0.20.3' WHERE varname = 'DB_VERSION'";
+			break;
+		case '0.20.4':
+			$query[] = "INSERT INTO `Config` (varname, varvalue, vartype, emptyok, is_hidden, is_userdefined, description) VALUES ('REVERSED_RACKS_LISTSRC', 'false', 'string', 'yes', 'no', 'no', 'List of racks with reversed (top to bottom) units order')";
+			$query[] = "UPDATE Config SET varvalue = '0.20.4' WHERE varname = 'DB_VERSION'";
 			break;
 		case 'dictionary':
 			$query = reloadDictionary();
